--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "mysql": "^2.18.1",
+    "pug": "^2.0.4",
     "tedious": "^8.3.0"
   },
   "devDependencies": {},
